# oz_health_tracker

./: .editorconfig  .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
ai_worker/: Dockerfile  README.md  queue_worker.py  sync_api.py
ai_worker/core/: config.py
ai_worker/tasks/: content_generation_task.py  recognition_task.py
app/: Dockerfile  admin.py  main.py
app/apis/v1/: auth_routers.py  chat_routers.py  medication_routers.py
app/core/: config.py  database.py  dependencies.py
app/dtos/: auth.py  chat.py  medication.py
app/models/: auth.py  chat.py  medication.py
app/repositories/: auth_repository.py  chat_repository.py  medication_repository.py
app/services/: auth_service.py  chat_service.py  llm_client.py  medication_service.py  notification_service.py  recognition_service.py  retriever.py  safety_service.py  user_health_context_service.py
app/tests/: test_chat_router.py  test_chat_service.py
app/utils/: logger.py  security.py
app/workers/: notification_worker.py
chainlit_prototype/: README.md  chat_app.py
docs/: 4주_애자일_구현계획서.md  CLAUDE_v1.1.md  CODING_RULES_v1.1.md  CONTRIBUTING_v1.1.md  FRONTEND_ARCHITECTURE_v1.1.md  PRD_ReMedi_v1.1.md  TRD_ReMedi_v1.1.md  add_versioning_v1.1.py  api_spec_core_v1_v1.1.yaml  arch_00_overview.mermaid  arch_01_client_api.mermaid  arch_02a_rag_chat_flow.mermaid  arch_02b_background_workers.mermaid  arch_03a_data_external.mermaid  arch_03b_workers_data_ops.mermaid  decision_log_v1.1.md  squad-map.md  version_api_spec_v1.1.py  요구사항_정의서_PRD_TRD_반영본.xlsx
docs/sample_code_chat/: README.md  chat_flow_sequence.mermaid  test_auth_router.py  test_chat_router.py  test_chat_service.py  test_nickname_service.py
docs/sample_code_chat/app/: main.py
docs/sample_code_recog/: recognition_flow_sequence.mermaid  test_recognition_router.py  test_recognition_service.py
envs/: example.local.env  example.prod.env
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  serviceWorker.ts
(+32 files in other folders)
