[project]
name = "remedi"
version = "0.1.0"
description = "ReMedi — LLM 기반 복약·건강관리 서비스"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
]

[dependency-groups]
app = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncmy>=0.2.9",
    "redis>=5.0.0",
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
    "openai>=1.50.0",
]
ai = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "coverage>=7.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90", "B", "UP", "N"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI의 Depends()는 매 요청마다 재호출되는 게 정상 동작이다 (B008 오탐 방지).
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends"]

[tool.ruff.lint.per-file-ignores]
# 테스트 함수명은 한글 문장형이 팀 컨벤션이다 (CODING_RULES.md §4 — test_새로운_닉네임은_사용가능하다).
"**/test_*.py" = ["N802"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
